@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.2-8
-Date: 2017-01-16
+Version: 1.2-9
+Date: 2017-02-..
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
